@@ -1,3 +1,8 @@
+2003-02-05  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
+
+	* expression.cpp: Fix zero inc slab bug.
+	* S_scheme_fields.cpp: Ditto.
+
 2003-02-04  Peter Bienstman  <Peter.Bienstman@rug.ac.be>
 
 	* field.h: Remove superfluous constructor.
